src/ts/tests/fixtures/invalid_modifiers/poo.cloesce.ts
// @ts-nocheck
// InvalidPropertyModifier

@PlainOldObject
export class Foo {
  private a: number;
}
